set(CMAKE_VERBOSE_MAKEFILE ON)
cmake_minimum_required(VERSION 3.0)
project( VideoFilter )
find_package( OpenCV REQUIRED )
set(CMAKE_CXX_FLAGS "-DFFMPEG=1 -DWITH_OPENCL=1")
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( VideoFilter VideoFilter.cpp )
target_link_libraries( VideoFilter ${OpenCV_LIBS} )
